[package]
name = "_algo"
version = "0.1.0-devel"
edition = "2021"
rust-version = "1.78.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "Apache-2.0"

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
fxhash2 = { version = "^2" }
pyo3 = { version = "^0.23", features = ["auto-initialize", "serde"], optional = true }
rclite = { version = "^0.2", default-features = false, features = ["rc"] }
serde = { version = "^1.0", features = ["derive"] }
smol_str = { version = "^0.2", default-features = false, features = ["serde"] }
triomphe = { version = "^0.1", default-features = false, features = ["serde", "std"] }
